--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
       <img src="./w3images000/popsicle.jpg" alt="Popsicle" style="width:100%">
-      <h3>All I Need Is a Popsicle</h3>
+      <h3><a href="./FoodWebSite/sub/s5.html">All I Need Is a Popsicle</a></h3>
       <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
