--- a/FoodWebSite/sub/s2.html
+++ b/FoodWebSite/sub/s2.html
@@ -1,10 +1,21 @@
 <html>
     <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W4QH4N682D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-W4QH4N682D');
+</script>
+
+<title>第二個頁面</title>
+<meta charset="UTF-8">
     </head>
     <body>
         <img src="../w3images/steak.jpg" alt="Steak" style="width:400px">
         <h3>Let Me Tell You About This Steak</h3>
-        <a href="../Food_main.html">[ back ]</a>
+        <a href="../index.html">[ back ]</a>
     </body>
 </html>
