--- a/FoodWebSite/sub/s1.html
+++ b/FoodWebSite/sub/s1.html
@@ -16,6 +16,6 @@
     <body>
         <img src="../w3images/sandwich.jpg" alt="Sandwich" style="width:400px">
         <h3>The Perfect Sandwich, A Real NYC Classic</h3>
-        <a href="../Food_main.html">[ back ]</a>
+        <a href="../index.html">[ back ]</a>
     </body>
 </html>
