--- a/FoodWebSite/sub/s2.html
+++ b/FoodWebSite/sub/s2.html
@@ -16,6 +16,6 @@
     <body>
         <img src="../w3images/steak.jpg" alt="Steak" style="width:400px">
         <h3>Let Me Tell You About This Steak</h3>
-        <a href="../Food_main.html">[ back ]</a>
+        <a href="../index.html">[ back ]</a>
     </body>
 </html>
