--- a/FoodWebSite/sub/s5.html
+++ b/FoodWebSite/sub/s5.html
@@ -16,7 +16,7 @@
     <body>
         <img src="./w3images000/popsicle.jpg" alt="Popsicle" style="width:400px">
         <h3>All I Need Is a Popsicle</h3>
-        <a href="../Food_main.html">[ back ]</a>
+        <a href="../index.html">[ back ]</a>
     </body>
 
 </html>
