--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W4QH4N682D"></script>
+<--<script async src="https://www.googletagmanager.com/gtag/js?id=G-W4QH4N682D"></script>-->
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
