--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W4QH4N682D"></script>
 <script>
-  <!--window.dataLayer = window.dataLayer || [];-->
+  window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
